# zkbridge

./: .gitignore  README.md  install-libraries.bat  pyproject.toml  start.bat  start.py
bot/: author.py  bridge.py  chains.py  config.py  constants.py  gui.py  image.py  input.py  logger.py  main.py  paths.py  scripts.py  settings.py  types_.py  utils.py
bot/better_http/: exceptions.py
bot/better_web3/: __init__.py  assets.py  chain.py  chains.py  contract.py  explorer.py  paths.py  utils.py
bot/better_web3/assets/: chains.json
bot/gui/: __init__.py  bridge_tab.py  gui.py  log_window.py  menu_bar.py  messager_tab.py  utils.py  wallets_tab.py
bot/gui/tabs/: __init__.py  bridge_tab.py  chains_tab.py  messanger_tab.py  wallets_tab.py
bot/http_client/: __init__.py  http_client.py
bot/zk_bridge/: __init__.py  abi.py  api.py  assets.py  chains.py  config.py  constants.py  contract.py  contracts.py  exceptions.py  models.py  paths.py  types_.py  web3_.py
bot/zk_bridge/abi/: mailer.json  receiver.json
bot/zk_bridge/assets/: chains.toml  receivers.json
bot/zk_bridge/assets/abi/: sender.json
bot/zk_bridge/config/: additional_chains_data.json  mailers.json  senders.json
bot/zk_bridge_api/: __init__.py  exceptions.py  http.py  web3_.py
config/: chains.toml  config.toml
default_config/: chains.toml  config.toml
